# abbreviation-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: abbreviations.json  main.rs  structs.rs
src/commands/: add.rs  help.rs  init.rs  list.rs  mod.rs  search.rs  version.rs
src/helpers/: directory.rs  load_abbr.rs  mod.rs
