[package]
name = "abbreviation-rs"
version = "0.4.0"
edition = "2024"
description = "A CLI that searches an abbreviation and gives the full term!"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/Devitzer/abbreviation-rs"

[dependencies]
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "abbreviation"
path = "src/main.rs"
